--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ textarea{
     border: none;
     resize: none;
     color: #000000;
-    border-left: 1px solid black;
+    /* border-left: 1px solid black; */
     padding: 10px;
 }
   
@@ -28,6 +28,7 @@ textarea{
 .time-block{
     text-align: center;
     border-radius: 15px;
+    height: 80px;
 }
   
 .row {
@@ -40,6 +41,7 @@ textarea{
     background-color: #ffffff;
     color: #000000;
     border-top: 1px dashed #000000;
+    height: 80px;
 }
   
 .past {
