--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ textarea{
     border: none;
     resize: none;
     color: #000000;
-    /* border-left: 1px solid black; */
-    padding: 10px;
+    width: 100%;
+    height: 100%;
 }
   
 .jumbotron {
@@ -34,7 +34,7 @@ textarea{
 .row {
     white-space: pre-wrap;
     height: 80px;
-    border-top: 1px solid white;;
+    border-top: 1px solid white;
 }
   
 .hour {
