--- a/style.css
+++ b/style.css
@@ -70,3 +70,10 @@ textarea{
     font-size: 20px;
     transition: all .3s ease-in-out;
 }
+
+.clearBtn {
+    border: 1px solid black;
+    border-radius: 15px;
+    background-color: #06AED5;
+    color: white;
+}
